spec/parse/parser.go
// Code generated by peg --syntax --inline --strict --output ./parser.go ../internal/grammar.peg. DO NOT EDIT.

package parse

import (
	"bytes"
	"fmt"
	"io"
	"os"
	"slices"
	"strconv"
	"strings"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleSpec
	ruleNamespaceSpec
	ruleNamespaceName
	ruleNamespaceCapture
	ruleCompositeSpec
	ruleCompositeList
	ruleCompositePair
	ruleCompositeCapture
	ruleCompositeMeta
	ruleCompositeArgs
	ruleArgumentCapture
	ruleParameterSpec
	ruleParameterList
	ruleParameterItem
	ruleParameterCapture
	ruleStatementSpec
	ruleStatementList
	ruleStatementAssn
	ruleStatementEval
	ruleStatementAtom
	ruleStatementExpr
	ruleStatementCapture
	ruleEndOfLine
	ruleEndOfFile
	ruleLineComment
	ruleBlockComment
	ruleBlank
	ruleSpace
	ruleElide
	rule_
	rule___
	ruleIdentifier
	ruleCommonWord
	ruleCommonName
	ruleBinLiteral
	ruleOctLiteral
	ruleDecLiteral
	ruleHexLiteral
	ruleRational
	ruleExponent
	ruleIntLiteral
	ruleFltLiteral
	ruleNumLiteral
	ruleOctEscape
	ruleHexEscape
	ruleSeqEscape
	ruleStrLiteral
	ruleInitCompositeMeta
	ruleTermCompositeMeta
	ruleInitParameterMeta
	ruleTermParameterMeta
	ruleInitStatementMeta
	ruleTermStatementMeta
	ruleAssnStatementMeta
	ruleSeqDelim
	ruleSetDelim
	ruleSIGN_SYMBOL
	ruleDEC_NONZERO
	ruleDEC_DIGIT
	ruleBIN_DIGIT
	ruleOCT_HIBITS
	ruleOCT_DIGIT
	ruleHEX_DIGIT
	ruleBIN_SIGIL
	ruleOCT_SIGIL
	ruleHEX_SIGIL
	ruleEXP_SIGIL
	ruleBIN_PREFIX
	ruleHEX_PREFIX
	ruleIDENT_ALPHA
	ruleIDENT_ALNUM
	ruleMETA_SYNTAX
	ruleLF
	ruleCR
	ruleTAB
	ruleSP
	ruleSEMI
	ruleCOMMA
	ruleHASH
	ruleDQUOTE
	ruleSTAR
	ruleSLASH
	ruleEQUALS
	ruleLANGLE
	ruleRANGLE
	ruleLPAREN
	ruleRPAREN
	ruleLBRACE
	ruleRBRACE
	ruleAction0
	rulePegText
	ruleAction1
	ruleAction2
	ruleAction3
	ruleAction4
	ruleAction5
)

var rul3s = [...]string{
	"Unknown",
	"Spec",
	"NamespaceSpec",
	"NamespaceName",
	"NamespaceCapture",
	"CompositeSpec",
	"CompositeList",
	"CompositePair",
	"CompositeCapture",
	"CompositeMeta",
	"CompositeArgs",
	"ArgumentCapture",
	"ParameterSpec",
	"ParameterList",
	"ParameterItem",
	"ParameterCapture",
	"StatementSpec",
	"StatementList",
	"StatementAssn",
	"StatementEval",
	"StatementAtom",
	"StatementExpr",
	"StatementCapture",
	"EndOfLine",
	"EndOfFile",
	"LineComment",
	"BlockComment",
	"Blank",
	"Space",
	"Elide",
	"_",
	"___",
	"Identifier",
	"CommonWord",
	"CommonName",
	"BinLiteral",
	"OctLiteral",
	"DecLiteral",
	"HexLiteral",
	"Rational",
	"Exponent",
	"IntLiteral",
	"FltLiteral",
	"NumLiteral",
	"OctEscape",
	"HexEscape",
	"SeqEscape",
	"StrLiteral",
	"InitCompositeMeta",
	"TermCompositeMeta",
	"InitParameterMeta",
	"TermParameterMeta",
	"InitStatementMeta",
	"TermStatementMeta",
	"AssnStatementMeta",
	"SeqDelim",
	"SetDelim",
	"SIGN_SYMBOL",
	"DEC_NONZERO",
	"DEC_DIGIT",
	"BIN_DIGIT",
	"OCT_HIBITS",
	"OCT_DIGIT",
	"HEX_DIGIT",
	"BIN_SIGIL",
	"OCT_SIGIL",
	"HEX_SIGIL",
	"EXP_SIGIL",
	"BIN_PREFIX",
	"HEX_PREFIX",
	"IDENT_ALPHA",
	"IDENT_ALNUM",
	"META_SYNTAX",
	"LF",
	"CR",
	"TAB",
	"SP",
	"SEMI",
	"COMMA",
	"HASH",
	"DQUOTE",
	"STAR",
	"SLASH",
	"EQUALS",
	"LANGLE",
	"RANGLE",
	"LPAREN",
	"RPAREN",
	"LBRACE",
	"RBRACE",
	"Action0",
	"PegText",
	"Action1",
	"Action2",
	"Action3",
	"Action4",
	"Action5",
}

type Uint interface {
	~uint | ~uint8 | ~uint16 | ~uint32 | ~uint64
}

type token[U Uint] struct {
	pegRule
	begin, end U
}

func (t *token[_]) String() string {
	// \x1B[34m = blue
	// \x1B[m   = normal (disable color)
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node[U Uint] struct {
	token[U]
	up, next *node[U]
}

func (n *node[U]) print(w io.Writer, pretty bool, buffer string) {
	var printFunc func(n *node[U], depth int)
	printFunc = func(n *node[U], depth int) {
		for n != nil {
			for range depth {
				fmt.Fprint(w, " ")
			}
			rule := rul3s[n.pegRule]
			quote := strconv.Quote(string([]rune(buffer)[n.begin:n.end]))
			if !pretty {
				fmt.Fprintf(w, "%v %v\n", rule, quote)
			} else {
				fmt.Fprintf(w, "\x1B[36m%v\x1B[m %v\n", rule, quote)
			}
			if n.up != nil {
				print(n.up, depth+1)
			}
			n = n.next
		}
	}
	printFunc(n, 0)
}

func (n *node[_]) Print(w io.Writer, buffer string) {
	n.print(w, false, buffer)
}

func (n *node[_]) PrettyPrint(w io.Writer, buffer string) {
	n.print(w, true, buffer)
}

type tokens[U Uint] struct {
	tree []token[U]
}

func (t *tokens[_]) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens[_]) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens[U]) AST() *node[U] {
	type element struct {
		node *node[U]
		down *element
	}
	tokenSlice := t.Tokens()
	var stack *element
	for _, token := range tokenSlice {
		if token.begin == token.end {
			continue
		}
		node := &node[U]{token: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens[_]) PrintSyntaxTree(buffer string) {
	t.AST().Print(os.Stdout, buffer)
}

func (t *tokens[_]) WriteSyntaxTree(w io.Writer, buffer string) {
	t.AST().Print(w, buffer)
}

func (t *tokens[_]) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(os.Stdout, buffer)
}

func (t *tokens[U]) Add(rule pegRule, begin, end, index U) {
	tree, i := t.tree, int(index)
	newToken := token[U]{pegRule: rule, begin: begin, end: end}

	if i >= len(tree) {
		t.tree = append(tree, newToken)
		return
	}
	tree[i] = newToken
}

func (t *tokens[U]) Tokens() []token[U] {
	return t.tree
}

type parser[U Uint] struct {
	Namespaces []Namespace

	idx int

	Buffer         string
	buffer         []rune
	rules          [97]func() bool
	parse          func(rule ...int) error
	reset          func()
	Pretty         bool
	disableMemoize bool
	tokens[U]
}

func (p *parser[_]) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *parser[_]) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length := len(positions)
	translations := make(textPositionMap, length)
	posIdx := 0
	line := 1
	symbol := 0

	slices.Sort(positions)

	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[posIdx] {
			translations[positions[posIdx]] = textPosition{line, symbol}
			for posIdx++; posIdx < length; posIdx++ {
				if i == positions[posIdx] {
					return translations
				}
			}
		}
		if posIdx >= length {
			break
		}
	}

	return translations
}

type parseError[U Uint] struct {
	p        *parser[U]
	maxToken token[U]
}

func (e *parseError[U]) Error() string {
	tokenSlice, err := []token[U]{e.maxToken}, "\n"
	positions, p := make([]int, 2*len(tokenSlice)), 0
	for _, t := range tokenSlice {
		positions[p], p = int(t.begin), p+1
		positions[p], p = int(t.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, t := range tokenSlice {
		begin, end := int(t.begin), int(t.end)
		err += fmt.Sprintf(format,
			rul3s[t.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return err
}

func (p *parser[_]) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens.PrintSyntaxTree(p.Buffer)
	}
}

func (p *parser[_]) WriteSyntaxTree(w io.Writer) {
	p.tokens.WriteSyntaxTree(w, p.Buffer)
}

func (p *parser[_]) SprintSyntaxTree() string {
	var b bytes.Buffer
	p.WriteSyntaxTree(&b)
	return b.String()
}

func (p *parser[_]) Execute() {
	buffer, _buffer, text, begin, end := p.Buffer, p.buffer, "", 0, 0
	for _, t := range p.Tokens() {
		switch t.pegRule {

		case rulePegText:
			begin, end = int(t.begin), int(t.end)
			text = string(_buffer[begin:end])

		case ruleAction0:
			p.idx = len(p.Namespaces)
		case ruleAction1:

			p.Namespaces = append(
				p.Namespaces, Namespace{Ident: text},
			)

		case ruleAction2:

			p.Namespaces[p.idx].Composites = append(
				p.Namespaces[p.idx].Composites, Composite{Ident: text},
			)

		case ruleAction3:

			idx := len(p.Namespaces[p.idx].Composites) - 1
			p.Namespaces[p.idx].Composites[idx].arguments = append(
				p.Namespaces[p.idx].Composites[idx].arguments, Argument{Value: text},
			)

		case ruleAction4:

			p.Namespaces[p.idx].Parameters = append(
				p.Namespaces[p.idx].Parameters, Parameter{Value: text},
			)

		case ruleAction5:

			ident, expr, _ := strings.Cut(text, "=")
			p.Namespaces[p.idx].Statements = append(
				p.Namespaces[p.idx].Statements,
				Statement{
					Ident:      strings.TrimSpace(ident),
					Operator:   "=",
					Expression: &Expression{Src: strings.TrimSpace(expr)},
				},
			)

		}
	}
	_, _, _, _, _ = buffer, _buffer, text, begin, end
}

func Pretty[U Uint](pretty bool) func(*parser[U]) error {
	return func(p *parser[U]) error {
		p.Pretty = pretty
		return nil
	}
}

func Size[U Uint](size int) func(*parser[U]) error {
	return func(p *parser[U]) error {
		p.tokens = tokens[U]{tree: make([]token[U], 0, size)}
		return nil
	}
}

func DisableMemoize[U Uint]() func(*parser[U]) error {
	return func(p *parser[U]) error {
		p.disableMemoize = true
		return nil
	}
}

type memo[U Uint] struct {
	Matched bool
	Partial []token[U]
}

type memoKey[U Uint] struct {
	Rule     U
	Position U
}

func (p *parser[U]) Init(options ...func(*parser[U]) error) error {
	var (
		maxToken             token[U]
		position, tokenIndex U
		buffer               []rune
		memoization          map[memoKey[U]]memo[U]
	)
	for _, option := range options {
		err := option(p)
		if err != nil {
			return err
		}
	}
	p.reset = func() {
		maxToken = token[U]{}
		position, tokenIndex = 0, 0
		memoization = make(map[memoKey[U]]memo[U])
		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := p.tokens
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens = tree
		if matches {
			p.Trim(uint32(tokenIndex))
			return nil
		}
		return &parseError[U]{p, maxToken}
	}

	add := func(rule pegRule, begin U) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > maxToken.end {
			maxToken = token[U]{rule, begin, position}
		}
	}

	memoize := func(rule U, begin U, tokenIndexStart U, matched bool) {
		if p.disableMemoize {
			return
		}
		key := memoKey[U]{rule, begin}
		if !matched {
			memoization[key] = memo[U]{Matched: false}
		} else {
			memoization[key] = memo[U]{
				Matched: true,
				Partial: slices.Clone(tree.tree[tokenIndexStart:tokenIndex]),
			}
		}
	}

	memoizedResult := func(m memo[U]) bool {
		if !m.Matched {
			return false
		}
		tree.tree = append(tree.tree[:tokenIndex], m.Partial...)
		tokenIndex += U(len(m.Partial))
		position = m.Partial[len(m.Partial)-1].end
		if tree.tree[tokenIndex-1].begin != position && position > maxToken.end {
			maxToken = tree.tree[tokenIndex-1]
		}
		return true
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	_rules = [...]func() bool{
		nil,

		/* 0 Spec <- <(___ (NamespaceSpec Action0 ___)* EndOfFile)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{0, position}]; ok {
				return memoizedResult(memoized)
			}
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				if !_rules[rule___]() {
					goto l0
				}
			l2:
				{
					position3, tokenIndex3 := position, tokenIndex
					{
						position4 := position
						{
							position5 := position
							{
								position6 := position
								if !_rules[ruleNamespaceName]() {
									goto l3
								}
								add(rulePegText, position6)
							}
							{
								add(ruleAction1, position)
							}
							add(ruleNamespaceCapture, position5)
						}
						{
							position8, tokenIndex8 := position, tokenIndex
							{
								position10 := position
								{
									position11 := position
									if !_rules[rule___]() {
										goto l8
									}
									if !_rules[ruleLANGLE]() {
										goto l8
									}
									if !_rules[rule___]() {
										goto l8
									}
									add(ruleInitCompositeMeta, position11)
								}
							l12:
								{
									position13, tokenIndex13 := position, tokenIndex
									{
										position14 := position
										{
											position15, tokenIndex15 := position, tokenIndex
											if !_rules[ruleSeqDelim]() {
												goto l16
											}
											goto l15
										l16:
											position, tokenIndex = position15, tokenIndex15
											if !_rules[ruleCompositePair]() {
												goto l13
											}
										l17:
											{
												position18, tokenIndex18 := position, tokenIndex
												if !_rules[ruleSeqDelim]() {
													goto l18
												}
												if !_rules[ruleCompositePair]() {
													goto l18
												}
												goto l17
											l18:
												position, tokenIndex = position18, tokenIndex18
											}
										}
									l15:
										add(ruleCompositeList, position14)
									}
									goto l12
								l13:
									position, tokenIndex = position13, tokenIndex13
								}
								{
									position19 := position
									if !_rules[rule___]() {
										goto l8
									}
									if !_rules[ruleRANGLE]() {
										goto l8
									}
									if !_rules[rule___]() {
										goto l8
									}
									add(ruleTermCompositeMeta, position19)
								}
								add(ruleCompositeSpec, position10)
							}
							goto l9
						l8:
							position, tokenIndex = position8, tokenIndex8
						}
					l9:
						{
							position20, tokenIndex20 := position, tokenIndex
							{
								position22 := position
								if !_rules[ruleInitParameterMeta]() {
									goto l20
								}
							l23:
								{
									position24, tokenIndex24 := position, tokenIndex
									{
										position25 := position
										{
											position26, tokenIndex26 := position, tokenIndex
											if !_rules[ruleSeqDelim]() {
												goto l27
											}
											goto l26
										l27:
											position, tokenIndex = position26, tokenIndex26
											if !_rules[ruleParameterCapture]() {
												goto l24
											}
										l28:
											{
												position29, tokenIndex29 := position, tokenIndex
												if !_rules[ruleSeqDelim]() {
													goto l29
												}
												if !_rules[ruleParameterCapture]() {
													goto l29
												}
												goto l28
											l29:
												position, tokenIndex = position29, tokenIndex29
											}
										}
									l26:
										add(ruleParameterList, position25)
									}
									goto l23
								l24:
									position, tokenIndex = position24, tokenIndex24
								}
								if !_rules[ruleTermParameterMeta]() {
									goto l20
								}
								add(ruleParameterSpec, position22)
							}
							goto l21
						l20:
							position, tokenIndex = position20, tokenIndex20
						}
					l21:
						{
							position30, tokenIndex30 := position, tokenIndex
							{
								position32 := position
								if !_rules[ruleInitStatementMeta]() {
									goto l30
								}
							l33:
								{
									position34, tokenIndex34 := position, tokenIndex
									{
										position35 := position
										{
											position36, tokenIndex36 := position, tokenIndex
											if !_rules[ruleSetDelim]() {
												goto l37
											}
											goto l36
										l37:
											position, tokenIndex = position36, tokenIndex36
											if !_rules[ruleStatementCapture]() {
												goto l34
											}
										l38:
											{
												position39, tokenIndex39 := position, tokenIndex
												if !_rules[ruleSetDelim]() {
													goto l39
												}
												if !_rules[ruleStatementCapture]() {
													goto l39
												}
												goto l38
											l39:
												position, tokenIndex = position39, tokenIndex39
											}
										}
									l36:
										add(ruleStatementList, position35)
									}
									goto l33
								l34:
									position, tokenIndex = position34, tokenIndex34
								}
								if !_rules[ruleTermStatementMeta]() {
									goto l30
								}
								add(ruleStatementSpec, position32)
							}
							goto l31
						l30:
							position, tokenIndex = position30, tokenIndex30
						}
					l31:
						add(ruleNamespaceSpec, position4)
					}
					{
						add(ruleAction0, position)
					}
					if !_rules[rule___]() {
						goto l3
					}
					goto l2
				l3:
					position, tokenIndex = position3, tokenIndex3
				}
				{
					position41 := position
					{
						position42, tokenIndex42 := position, tokenIndex
						if !matchDot() {
							goto l42
						}
						goto l0
					l42:
						position, tokenIndex = position42, tokenIndex42
					}
					add(ruleEndOfFile, position41)
				}
				add(ruleSpec, position1)
			}
			memoize(0, position0, tokenIndex0, true)
			return true
		l0:
			memoize(0, position0, tokenIndex0, false)
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 NamespaceSpec <- <(NamespaceCapture CompositeSpec? ParameterSpec? StatementSpec?)> */
		nil,
		/* 2 NamespaceName <- <CommonName> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{2, position}]; ok {
				return memoizedResult(memoized)
			}
			position44, tokenIndex44 := position, tokenIndex
			{
				position45 := position
				{
					position46 := position
					if !_rules[ruleIdentifier]() {
						goto l44
					}
				l47:
					{
						position48, tokenIndex48 := position, tokenIndex
						if !_rules[ruleCommonWord]() {
							goto l48
						}
						goto l47
					l48:
						position, tokenIndex = position48, tokenIndex48
					}
				l49:
					{
						position50, tokenIndex50 := position, tokenIndex
						{
							position51 := position
							if !_rules[ruleBlank]() {
								goto l50
							}
						l52:
							{
								position53, tokenIndex53 := position, tokenIndex
								if !_rules[ruleBlank]() {
									goto l53
								}
								goto l52
							l53:
								position, tokenIndex = position53, tokenIndex53
							}
							add(rule_, position51)
						}
						if !_rules[ruleCommonWord]() {
							goto l50
						}
					l54:
						{
							position55, tokenIndex55 := position, tokenIndex
							if !_rules[ruleCommonWord]() {
								goto l55
							}
							goto l54
						l55:
							position, tokenIndex = position55, tokenIndex55
						}
						goto l49
					l50:
						position, tokenIndex = position50, tokenIndex50
					}
					add(ruleCommonName, position46)
				}
				add(ruleNamespaceName, position45)
			}
			memoize(2, position44, tokenIndex44, true)
			return true
		l44:
			memoize(2, position44, tokenIndex44, false)
			position, tokenIndex = position44, tokenIndex44
			return false
		},
		/* 3 NamespaceCapture <- <(<NamespaceName> Action1)> */
		nil,
		/* 4 CompositeSpec <- <(InitCompositeMeta CompositeList* TermCompositeMeta)> */
		nil,
		/* 5 CompositeList <- <(SeqDelim / (CompositePair (SeqDelim CompositePair)*))> */
		nil,
		/* 6 CompositePair <- <(CompositeCapture CompositeMeta?)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{6, position}]; ok {
				return memoizedResult(memoized)
			}
			position59, tokenIndex59 := position, tokenIndex
			{
				position60 := position
				{
					position61 := position
					{
						position62 := position
						if !_rules[ruleNamespaceName]() {
							goto l59
						}
						add(rulePegText, position62)
					}
					{
						add(ruleAction2, position)
					}
					add(ruleCompositeCapture, position61)
				}
				{
					position64, tokenIndex64 := position, tokenIndex
					{
						position66 := position
						if !_rules[ruleInitParameterMeta]() {
							goto l64
						}
					l67:
						{
							position68, tokenIndex68 := position, tokenIndex
							{
								position69 := position
								{
									position70, tokenIndex70 := position, tokenIndex
									if !_rules[ruleSeqDelim]() {
										goto l71
									}
									goto l70
								l71:
									position, tokenIndex = position70, tokenIndex70
									if !_rules[ruleArgumentCapture]() {
										goto l68
									}
								l72:
									{
										position73, tokenIndex73 := position, tokenIndex
										if !_rules[ruleSeqDelim]() {
											goto l73
										}
										if !_rules[ruleArgumentCapture]() {
											goto l73
										}
										goto l72
									l73:
										position, tokenIndex = position73, tokenIndex73
									}
								}
							l70:
								add(ruleCompositeArgs, position69)
							}
							goto l67
						l68:
							position, tokenIndex = position68, tokenIndex68
						}
						if !_rules[ruleTermParameterMeta]() {
							goto l64
						}
						add(ruleCompositeMeta, position66)
					}
					goto l65
				l64:
					position, tokenIndex = position64, tokenIndex64
				}
			l65:
				add(ruleCompositePair, position60)
			}
			memoize(6, position59, tokenIndex59, true)
			return true
		l59:
			memoize(6, position59, tokenIndex59, false)
			position, tokenIndex = position59, tokenIndex59
			return false
		},
		/* 7 CompositeCapture <- <(<NamespaceName> Action2)> */
		nil,
		/* 8 CompositeMeta <- <(InitParameterMeta CompositeArgs* TermParameterMeta)> */
		nil,
		/* 9 CompositeArgs <- <(SeqDelim / (ArgumentCapture (SeqDelim ArgumentCapture)*))> */
		nil,
		/* 10 ArgumentCapture <- <(<ParameterItem> Action3)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{10, position}]; ok {
				return memoizedResult(memoized)
			}
			position77, tokenIndex77 := position, tokenIndex
			{
				position78 := position
				{
					position79 := position
					if !_rules[ruleParameterItem]() {
						goto l77
					}
					add(rulePegText, position79)
				}
				{
					add(ruleAction3, position)
				}
				add(ruleArgumentCapture, position78)
			}
			memoize(10, position77, tokenIndex77, true)
			return true
		l77:
			memoize(10, position77, tokenIndex77, false)
			position, tokenIndex = position77, tokenIndex77
			return false
		},
		/* 11 ParameterSpec <- <(InitParameterMeta ParameterList* TermParameterMeta)> */
		nil,
		/* 12 ParameterList <- <(SeqDelim / (ParameterCapture (SeqDelim ParameterCapture)*))> */
		nil,
		/* 13 ParameterItem <- <(Identifier / NumLiteral / StrLiteral)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{13, position}]; ok {
				return memoizedResult(memoized)
			}
			position83, tokenIndex83 := position, tokenIndex
			{
				position84 := position
				{
					position85, tokenIndex85 := position, tokenIndex
					if !_rules[ruleIdentifier]() {
						goto l86
					}
					goto l85
				l86:
					position, tokenIndex = position85, tokenIndex85
					{
						position88 := position
						{
							position89, tokenIndex89 := position, tokenIndex
							if !_rules[ruleSIGN_SYMBOL]() {
								goto l89
							}
							goto l90
						l89:
							position, tokenIndex = position89, tokenIndex89
						}
					l90:
						{
							position91, tokenIndex91 := position, tokenIndex
							{
								position93 := position
								{
									position94, tokenIndex94 := position, tokenIndex
									{
										position96 := position
										{
											position97, tokenIndex97 := position, tokenIndex
										l99:
											{
												position100, tokenIndex100 := position, tokenIndex
												if !_rules[ruleDEC_DIGIT]() {
													goto l100
												}
												goto l99
											l100:
												position, tokenIndex = position100, tokenIndex100
											}
											if buffer[position] != '.' {
												goto l98
											}
											position++
											if !_rules[ruleDEC_DIGIT]() {
												goto l98
											}
										l101:
											{
												position102, tokenIndex102 := position, tokenIndex
												if !_rules[ruleDEC_DIGIT]() {
													goto l102
												}
												goto l101
											l102:
												position, tokenIndex = position102, tokenIndex102
											}
											goto l97
										l98:
											position, tokenIndex = position97, tokenIndex97
											if !_rules[ruleDEC_DIGIT]() {
												goto l95
											}
										l103:
											{
												position104, tokenIndex104 := position, tokenIndex
												if !_rules[ruleDEC_DIGIT]() {
													goto l104
												}
												goto l103
											l104:
												position, tokenIndex = position104, tokenIndex104
											}
											if buffer[position] != '.' {
												goto l95
											}
											position++
										}
									l97:
										add(ruleRational, position96)
									}
									{
										position105, tokenIndex105 := position, tokenIndex
										if !_rules[ruleExponent]() {
											goto l105
										}
										goto l106
									l105:
										position, tokenIndex = position105, tokenIndex105
									}
								l106:
									goto l94
								l95:
									position, tokenIndex = position94, tokenIndex94
									if c := buffer[position]; c < '0' || c > '9' {
										goto l92
									}
									position++
								l107:
									{
										position108, tokenIndex108 := position, tokenIndex
										if c := buffer[position]; c < '0' || c > '9' {
											goto l108
										}
										position++
										goto l107
									l108:
										position, tokenIndex = position108, tokenIndex108
									}
									if !_rules[ruleExponent]() {
										goto l92
									}
								}
							l94:
								add(ruleFltLiteral, position93)
							}
							goto l91
						l92:
							position, tokenIndex = position91, tokenIndex91
							{
								position109 := position
								{
